kustomize/base/internship-backend/service.yaml
# Copyright (c) 2016-2017 ForgeRock AS. Use of this source code is subject to the
# Common Development and Distribution License (CDDL) that can be found in the LICENSE file
apiVersion: v1
kind: Service
metadata:
  name: internship-backend
spec:
  type: ClusterIP
  ports:
    - name: "internship-backend"
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: internship-backend
